examples/test/testpolicy2128.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2128
  namespace: namespace11
spec:
  podSelector:
    matchLabels:
      key32: value12
      key5: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value5
          key32: value19
          key38: value13
      podSelector:
        matchLabels:
          key13: value34
